<resources>
    <string name="trakt_base_url" translatable="false">https://api.trakt.tv/people/</string>
    <string name="trakt_cast_suffix" translatable="false">/people?extended=images</string>
    <string name="tmdb_movie_base_url" translatable="false">https://api.themoviedb.org/3/movie/</string>
    <string name="person_details_suffix" translatable="false">extended=full,images</string>
    <string name="person_movies_details" translatable="false">/movies?extended=images,full</string>
    <string name="imdb_link_prefix" translatable="false">https://www.imdb.com/title/</string>
    <string name="trailer_img_url" formatted="false" translatable="false">https://img.youtube.com/vi/%1$s/0.jpg</string>
    <string name="poster_prefix_185" translatable="false">https://image.tmdb.org/t/p/w342</string>
    <string name="poster_prefix_500" translatable="false">https://image.tmdb.org/t/p/w1280</string>
    <string name="poster_prefix_add_quality" translatable="false">https://image.tmdb.org/t/p/</string>
    <string name="trailer_link_prefix" translatable="false">https://www.youtube.com/watch?v=</string>
    <string name="collection_short_label" translatable="false">Collections</string>
    <string name="collection_long_label" translatable="false">Open your collection.</string>
    <string name="sync_account_type" translatable="false">filmy.salroid.com</string>
    <string name="app_name">Filmy</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="title_activity_detailed__cast">Detailed_Cast</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_full_cast">FullCastActivity</string>
    <string name="title_activity_full_movie">FullMovieActivity</string>
    <string name="title_activity_full_screen_image">FullScreenImage</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_saved_movies">Offline Movies</string>
    <string name="image_quality">medium</string>
    <string name="low">low</string>
    <string name="high">high</string>
    <string name="image">Image Quality</string>
    <string name="error_title_damn">Something went wrong !</string>
    <string name="info_retrying">Retrying</string>
    <string name="error_retry">Retry</string>
    <string name="rating">Rating</string>
    <string name="movies">Movies</string>
    <string name="cast">Cast</string>
    <string name="dash">- - - -</string>
    <string name="more">More</string>
    <string name="runtime">Runtime:</string>
    <string name="genre">Genre:</string>
    <string name="language">Language:</string>
    <string name="release_date">Release Date:</string>
    <string name="play">Play</string>
    <string name="trailer">Trailer</string>
    <string name="banner_image">Banner Image</string>
    <string name="you_saved_movies_appear_here">Your saved movies appear here.</string>
    <string name="no_saved_movies">No Saved Movies</string>
    <string name="saved_movies">Offline Movies</string>
    <string name="welcome_to_filmy">Welcome to Filmy</string>
    <string name="filmy_is_your_new_movie_app">Filmy is your new movie app.</string>
    <string name="categorized">Categorized</string>
    <string name="get_different_movies_in_different_categories_at_one_place">Get different movies in different categories at one place.</string>
    <string name="offline_movies">Offline movies</string>
    <string name="save_movies_locally_to_see_various_details_even_if_you_don_t_have_internet">Save movies locally to see various details even if you don\'t have internet.</string>
    <string name="exploration">Exploration</string>
    <string name="search_through_the_large_sea_of_movies_and_know_about_different_casts">Search through the large sea of movies and know about different casts.</string>
    <string name="close_description">Close description</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="about">About</string>
    <string name="about_screen_tittle">Made for Cinephiles</string>
    <string name="error_details">Unable to fetch movies.\nCheck internet connection then try again.</string>
    <string name="trending">POPULAR</string>
    <string name="theatres">IN THEATERS</string>
    <string name="upcoming">UPCOMING</string>
    <string name="details">Details</string>
    <string name="madefor">Made for Cinephiles</string>
    <string name="glide" translatable="false"><![CDATA[
    <b>Glide
    </b>
     <br>
     <pre>

      License for everything not in third_party and not otherwise marked:

Copyright 2014 Google, Inc. All rights reserved.

Redistribution and use in source and binary forms, with or without modification, are
permitted provided that the following conditions are met:

   1. Redistributions of source code must retain the above copyright notice, this list of
         conditions and the following disclaimer.

   2. Redistributions in binary form must reproduce the above copyright notice, this list
         of conditions and the following disclaimer in the documentation and/or other materials
         provided with the distribution.

THIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS\'\' AND ANY EXPRESS OR IMPLIED
WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR
CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

The views and conclusions contained in the software and documentation are those of the
authors and should not be interpreted as representing official policies, either expressed
or implied, of Google, Inc.
-----------------------------------------------------------------------

License for third_party/disklrucache:

Copyright 2012 Jake Wharton
Copyright 2011 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
------------------------------------------------------------------------

License for third_party/gif_decoder:

Copyright © 2013 Xcellent Creations, Inc.

Permission is hereby granted, free of charge, to any person obtaining
a copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:

The above copyright notice and this permission notice shall be
included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
------------------------------------------------------------------------

License for third_party/gif_encoder/AnimatedGifEncoder.java and
third_party/gif_encoder/LZWEncoder.java:

No copyright asserted on the source code of this class. May be used for any
purpose, however, refer to the Unisys LZW patent for restrictions on use of
the associated LZWEncoder class. Please forward any corrections to
kweiner@fmsware.com.

------------------------------------------------------------------------

License for third_party/gif_encoder/NeuQuant.java

Copyright © 1994 Anthony Dekker

NEUQUANT Neural-Net quantization algorithm by Anthony Dekker, 1994. See
"Kohonen neural networks for optimal colour quantization" in "Network:
Computation in Neural Systems" Vol. 5 (1994) pp 351-367. for a discussion of
the algorithm.

Any party obtaining a copy of these files from the author, directly or
indirectly, is granted, free of charge, a full and unrestricted irrevocable,
world-wide, paid up, royalty-free, nonexclusive right and license to deal in
this software and documentation files (the "Software"), including without
limitation the rights to use, copy, modify, merge, publish, distribute,
sublicense, and/or sell copies of the Software, and to permit persons who
receive copies from any such party to do so, with the only requirement being
that this copyright notice remain intact.
</pre>
    ]]></string>
    <string name="appintro" translatable="false"><![CDATA[
    <b>App Intro
    </b>
     <br>
     <pre>

      App Intro by PaoloRotolo
      https://github.com/PaoloRotolo/AppIntro
</pre>]]></string>
    <string name="shareappdetails">Share this App</string>
    <string name="favorite">Watched</string>
    <string name="watchlist" translatable="false">Watch List</string>
    <string name="user_holder">Not Logged in</string>
    <string name="collections" translatable="false">Collections</string>
    <string name="name_webianks">Ramankit Singh</string>
    <string name="bio_webianks">I love Android, designing and music.</string>
    <string name="name_salroid">Sajal Gupta</string>
    <string name="bio_salroid">The one with devil on the other side of mirror.</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="share">Share</string>
    <string name="theme">Theme</string>
    <string name="summary_system_default">System Default</string>
    <string name="theme_key" translatable="false">themeKey</string>
    <string name="license_key" translatable="false">licenseKey</string>
    <string name="share_key" translatable="false">shareKey</string>
    <string name="about_key" translatable="false">aboutKey</string>
    <string name="mode_night_follow_system" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="tv">TV</string>
</resources>