<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/mode_night_follow_system"
        android:enabled="true"
        android:entries="@array/themeEntries"
        android:entryValues="@array/themeValues"
        android:icon="@drawable/dark_mode"
        android:key="@string/theme_key"
        android:summary="@string/summary_system_default"
        android:title="@string/theme" />

    <Preference
        android:enabled="true"
        android:icon="@drawable/ic_article"
        android:key="@string/license_key"
        android:selectable="true"
        android:title="@string/license" />

    <Preference
        android:enabled="true"
        android:icon="@drawable/ic_document"
        android:key="@string/version"
        android:selectable="true"
        android:summary="3.1.0"
        android:title="@string/version" />

    <Preference
        android:enabled="true"
        android:icon="@drawable/twotone_share_24"
        android:key="@string/share_key"
        android:selectable="true"
        android:title="@string/shareappdetails" />

    <Preference
        android:enabled="true"
        android:icon="@drawable/ic_face"
        android:key="@string/about_key"
        android:selectable="true"
        android:title="@string/about" />

</PreferenceScreen>