<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/moviesContainer">

    <fragment
        android:id="@+id/moviesContainer"
        android:name="tech.salroid.filmy.ui.home.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies">

        <action
            android:id="@+id/action_fragment1"
            app:restoreState="true" />

    </fragment>

    <fragment
        android:id="@+id/tvContainer"
        android:name="tech.salroid.filmy.ui.home.TvFragment"
        android:label="@string/tv"
        tools:layout="@layout/fragment_tv">

        <action
            android:id="@+id/action_fragment2_to_fragment1"
            app:destination="@id/moviesContainer"
            app:popUpTo="@id/moviesContainer"
            app:popUpToInclusive="true"
            app:restoreState="true" />

    </fragment>

    <fragment
        android:id="@+id/collections"
        android:name="tech.salroid.filmy.ui.collections.CollectionsFragment"
        android:label="@string/collections"
        tools:layout="@layout/fragment_collections">

        <action
            android:id="@+id/action_fragment3_to_fragment1"
            app:destination="@id/moviesContainer"
            app:popUpTo="@id/moviesContainer"
            app:popUpToInclusive="true"
            app:restoreState="true" />

    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="tech.salroid.filmy.ui.settings.SettingsFragment"
        android:label="@string/title_activity_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_fragment4_to_fragment1"
            app:destination="@id/moviesContainer"
            app:popUpTo="@id/moviesContainer"
            app:popUpToInclusive="true"
            app:restoreState="true" />

        <action
            android:id="@+id/navigate_to_about"
            app:destination="@id/aboutScreen" />

    </fragment>

    <activity
        android:id="@+id/aboutScreen"
        android:name="tech.salroid.filmy.ui.settings.AboutActivity"
        android:label="@string/about"
        tools:layout="@layout/activity_about" />

    <activity
        android:id="@+id/licenseScreen"
        android:name="tech.salroid.filmy.ui.settings.LicenseActivity"
        android:label="@string/license"
        tools:layout="@layout/activity_license" />

</navigation>