<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/about_screen_tittle" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_webianks"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/banner_webianks"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_banner_min" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile_webianks"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginBottom="16dp"
                        android:padding="4dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:strokeColor="?attr/colorSurface"
                        app:strokeWidth="4dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/name_webianks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="95dp"
                        android:layout_toEndOf="@id/profile_webianks"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/name_webianks"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/bio_webianks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_webianks"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_toEndOf="@id/profile_webianks"
                        android:text="@string/bio_webianks" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bio_webianks"
                        android:layout_margin="16dp"
                        android:weightSum="3">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/email_webianks"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sendEmail"
                            android:text="@string/email"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/github_webianks"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="redirectGithub"
                            android:text="@string/github"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/website_webianks"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="redirectWebsite"
                            android:text="@string/website"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_salroid"
                style="?attr/materialCardViewElevatedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_webianks"
                android:layout_marginStart="2dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                app:cardPreventCornerOverlap="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_webianks">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/banner_salroid"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/default_banner_min" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/profile_salroid"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="55dp"
                        android:layout_marginBottom="16dp"
                        android:padding="4dp"
                        android:scaleType="centerCrop"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:strokeColor="?attr/colorSurface"
                        app:strokeWidth="4dp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/name_salroid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="95dp"
                        android:layout_toEndOf="@id/profile_salroid"
                        android:paddingLeft="16dp"
                        android:paddingTop="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="4dp"
                        android:text="@string/name_salroid"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/bio_salroid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_salroid"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_toEndOf="@id/profile_salroid"
                        android:text="@string/bio_salroid" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bio_salroid"
                        android:layout_margin="16dp"
                        android:weightSum="3">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/email_salroid"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="sendEmail"
                            android:text="@string/email"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/github_salroid"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="redirectGithub"
                            android:text="@string/github"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/website_salroid"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:onClick="redirectWebsite"
                            android:text="@string/website"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>