<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:padding="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:theme="@style/ThemeOverlay.AppCompat">

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collections"
                android:textColor="#757575"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorColor="@color/dark"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/black"
            app:tabUnboundedRipple="true"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/main_background"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/toolbar"
            android:background="?attr/colorAccent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/circularstd_book"
                    android:maxLines="1"
                    android:text="@string/user_holder"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/favContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/main_background"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorAccent2">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/favorite"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/watchlistContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/favContainer"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/main_background"
        android:visibility="gone">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@id/favContainer"
            android:background="@color/colorAccent3">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/circularstd_book"
                android:text="@string/watchlist"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
